--- a/client/src/home/right/right-container.scss
+++ b/client/src/home/right/right-container.scss
@@ -43,7 +43,7 @@ $shadow: rgba(0, 0, 0, 0.24) 0px 1px 5px;
         text-align: center;
     }
 
-    #delete-account-link {
+    footer {
         position: absolute;
         bottom: 20px;
         left: 50%;
@@ -52,6 +52,10 @@ $shadow: rgba(0, 0, 0, 0.24) 0px 1px 5px;
         color: #75a7ff;
         width: 100%;
         text-align: center;
+        
+        a {
+            margin: 0 5px;
+        }
     }
 
     #row-hello-logout {
@@ -132,6 +136,12 @@ $shadow: rgba(0, 0, 0, 0.24) 0px 1px 5px;
             flex-direction: column;
             align-items: center;
             margin-bottom: 10px;
+        }
+
+        footer {
+            display: flex;
+            flex-direction: column;
+            row-gap: 10px;
         }
     }
 
