--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -20,17 +20,6 @@ code {
     monospace;
 }
 
-footer {
-  position: relative;
-  top: 20px;
-  padding-bottom: 20px;
-  font-size: 20px;
-
-  a {
-    margin: 0 20px;
-  }
-}
-
 .padded {
   padding: 3em;
 }
